# AiogramTemplate

./: .env.dist  Dockerfile  Pipfile  alembic.ini  bot.py  docker-compose.yml  pyproject.toml
tgbot/: config.py
tgbot/handlers/: __init__.py  commands.py
tgbot/keyboards/: inline_keyboards.py  reply_keyboards.py
tgbot/misc/: states.py
tgbot/services/database/migrations/: env.py
tgbot/services/database/models/: telegram_user.py
